--- a/style.css
+++ b/style.css
@@ -272,6 +272,22 @@ body{
 
 /* Media Queries */
 
+@media (max-width: 500px) {
+    .meal-wrapper{
+        margin: 0;
+        padding: 0.3rem;
+    }
+    .title{
+        font-size: 2.4rem;
+        margin: 0;
+    }
+    .quote {
+        font-weight: bolder;
+        font-size: 1.2rem;
+        margin: 0;
+    }
+}
+
 @media screen and (min-width: 600px){
     .meal-search-box{
         width: 540px;
