--- a/style.css
+++ b/style.css
@@ -315,6 +315,21 @@ body{
         font-size: 1.2rem;
         margin: 0;
     }
+    .btn-up {
+        width: 60px;
+        height: 60px;
+        margin-right: 50px;
+        margin-bottom: 50px;
+    }
+}
+
+@media (max-width: 500px) {
+    .meal-item {
+        margin: 10px;
+    }
+    .meal-search-box{
+        width: 380px;
+    }
 }
 
 @media screen and (min-width: 600px){
