--- a/style.css
+++ b/style.css
@@ -306,6 +306,9 @@ body{
         margin: 0;
         padding: 0.3rem;
     }
+    .meal-search {
+        text-align: center;
+    }
     .title{
         font-size: 2.4rem;
         margin: 0;
