Centrar buscador en móvil

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body{
     background-size: cover;
 }
 
-
 /*  */
 
 .title{
@@ -302,6 +301,14 @@ body{
 /* Media Queries */
 
 @media (max-width: 500px) {
+    .meal-search{
+        margin: 0;
+    }
+    .meal-search-box{
+        margin: 1rem 0;
+        display: flex;
+        justify-content: center;
+    }
     .meal-wrapper{
         margin: 0;
         padding: 0.3rem;
