--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 }
 
 :root{
-    --tenne-tawny: #d65108;
-    --tenne-tawny-dark: #b54507;
+    --ligth-orange: #de7137;
+    --dark-orange: #a23d07;
 }
 
 body{
@@ -21,32 +21,7 @@ body{
     background-size: cover;
 }
 
-/*  */
-
-.title{
-    font-size: 2.8rem;
-    margin-bottom: 1rem;
-    color: black;
-}
-
-.enlace-home {
-    text-decoration: none;
-}
-
-.quote {
-    font-weight: bolder;
-    font-size: 1.6rem;
-}
-
-.btn{
-    font-family: inherit;
-    cursor: pointer;
-    outline: 0;
-    font-size: 1.05rem;
-}
-
-
-/*  */
+/* CABECERA  */
 
 .container{
     min-height: 100vh;
@@ -63,9 +38,22 @@ body{
     margin: 2rem 0;
 }
 
-.meal-search cite{
-    font-size: 1rem;
+.title{
+    font-size: 2.8rem;
+    margin-bottom: 1rem;
+    color: black;
 }
+
+.enlace-home {
+    text-decoration: none;
+}
+
+.quote {
+    font-weight: bolder;
+    font-size: 1.6rem;
+}
+
+/* SEARCH */
 
 .meal-search-box{
     margin: 1.2rem 0;
@@ -73,31 +61,14 @@ body{
     justify-content: center;
 }
 
-.search-control,
 .search-btn{
-    width: 100%;
-}
-
-.search-control{
-    padding: 0 1rem;
-    font-size: 1.1rem;
     font-family: inherit;
+    cursor: pointer;
     outline: 0;
-    border: 1px solid var(--tenne-tawny);
-    color: var(--tenne-tawny);
-    border-top-left-radius: 2rem;
-    border-bottom-left-radius: 2rem;
-}
-
-.search-control::placeholder{
-    color: var(--tenne-tawny);
-}
-
-.search-btn{
     width: 55px;
     height: 55px;
     font-size: 1.8rem;
-    background: var(--tenne-tawny);
+    background: var(--ligth-orange);
     color: #fff;
     border: none;
     border-top-right-radius: 2rem;
@@ -105,9 +76,27 @@ body{
     transition: all 0.4s linear;
 }
 
-.search-btn:hover{
-    background: var(--tenne-tawny-dark);
+.search-control{
+    width: 100%;
+    padding: 0 1rem;
+    font-size: 1.1rem;
+    font-family: inherit;
+    outline: 0;
+    border: 1px solid var(--ligth-orange);
+    color: var(--ligth-orange);
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 2rem;
 }
+
+.search-control::placeholder{
+    color: var(--ligth-orange);
+}
+
+.search-btn:hover{
+    background: var(--dark-orange);
+}
+
+/* RESULTS */
 
 .meal-result{
     margin-top: 4rem;
@@ -115,7 +104,7 @@ body{
 
 #meal{
     margin: 2.4rem 0;
-   color: var(--tenne-tawny-dark);
+    color: var(--dark-orange);
 }
 
 .meal-item{
@@ -125,23 +114,20 @@ body{
     margin: 2rem 0;
 }
 
-.meal-img img{
+.meal-img img {
     width: 100%;
     display: block;
 }
 
 .meal-name{
     padding: 1.5rem 0.5rem;
-}
-
-.meal-name h3{
     font-size: 1.4rem;
 }
 
 .recipe-btn{
     text-decoration: none;
     color: #fff;
-    background: var(--tenne-tawny);
+    background: var(--ligth-orange);
     font-weight: 500;
     font-size: 1.1rem;
     padding: 0.75rem 0;
@@ -153,18 +139,17 @@ body{
 }
 
 .recipe-btn:hover{
-    background: var(--tenne-tawny-dark);
+    background: var(--dark-orange);
 }
 
-/* meal details */
+/* MEAL DETAILS */
 
 .meal-details{
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #fff;
-    background: var(--tenne-tawny);
+    background: var(--ligth-orange);
     border-radius: 1rem;
     width: 90%;
     height: 90%;
@@ -182,8 +167,7 @@ body{
     border-radius: 2rem;
 }
 
-
-/* js related */
+/* CONTENIDO CREADO EN JS */
 
 .showRecipe{
     display: block;
@@ -191,10 +175,6 @@ body{
 
 .meal-details-content{
     margin: 2rem;
-}
-
-.meal-details-content p:not(.recipe-category){
-    padding: 1rem 0;
 }
 
 .recipe-close-btn{
@@ -210,27 +190,17 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    opacity: 0.9;
+    opacity: 0.8;
 }
 
 .recipe-title{
-    letter-spacing: 1px;
     padding-bottom: 1rem;
 }
 
 .recipe-category{
     background: #fff;
     font-weight: 600;
-    color: var(--tenne-tawny);
-    display: inline-block;
-    padding: 0.2rem 0.5rem;
-    border-radius: 0.3rem;
-}
-
-.recipe-category{
-    background: #fff;
-    font-weight: 600;
-    color: var(--tenne-tawny);
+    color: var(--ligth-orange);
     display: inline-block;
     padding: 0.2rem 0.5rem;
     border-radius: 0.3rem;
@@ -244,7 +214,7 @@ body{
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    margin: 0 auto;
+    margin: 20px auto;
     display: block;
 }
 
@@ -259,20 +229,15 @@ body{
     transition: all 0.4s linear;
 }
 
-.recipe-link a:hover{
-    opacity: 0.8;
-}
-
-
-/*  */
-
 .notFound{
     grid-template-columns: 1fr!important;
-    color: var(--tenne-tawny-dark);
+    color: var(--dark-orange);
     font-size: 1.8rem;
     font-weight: 600;
     width: 100%;
 }
+
+/* FOOTER BTN UP */
 
 #footer {
     display: flex;
@@ -281,9 +246,10 @@ body{
 }
 
 .btn-up {
+    font-size: 1.2rem;
     text-decoration: none;
     color: #fff;
-    background-color: var(--tenne-tawny);
+    background-color: var(--ligth-orange);
     width: 80px;
     height: 80px;
     border: none;
@@ -295,15 +261,14 @@ body{
 }
 
 .btn-up:hover {
-    background-color: var(--tenne-tawny-dark);
+    background-color: #fff;
+    color: var(--ligth-orange);
+    border: 1px solid var(--ligth-orange);
 }
 
-/* Media Queries */
+/* MEDIA QUERIES */
 
 @media (max-width: 500px) {
-    .meal-search-box{
-        
-    }
     .meal-search{
         margin: 0;
     }
