--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ body{
 
 .meal-search{
     margin: 2rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .title{
@@ -59,6 +63,7 @@ body{
     margin: 1.2rem 0;
     display: flex;
     justify-content: center;
+    width: 34rem;
 }
 
 .search-btn{
@@ -268,17 +273,7 @@ body{
 
 /* MEDIA QUERIES */
 
-@media (max-width: 500px) {
-    .meal-search{
-        margin: 0;
-    }
-    .meal-wrapper{
-        margin: 0;
-        padding: 0.3rem;
-    }
-    .meal-search {
-        text-align: center;
-    }
+@media screen and (max-width: 570px) {
     .title{
         font-size: 2.4rem;
         margin: 0;
@@ -288,28 +283,23 @@ body{
         font-size: 1.2rem;
         margin: 0;
     }
-    .btn-up {
-        width: 60px;
-        height: 60px;
-        margin-right: 50px;
-        margin-bottom: 50px;
+    .meal-search{
+        margin: 0;
     }
-}
-
-@media (max-width: 500px) {
+    .meal-wrapper{
+        padding: 0.3rem;
+    }
     .meal-item {
         margin: 10px;
     }
     .meal-search-box{
         width: 380px;
     }
-}
-
-@media screen and (min-width: 600px){
-    .meal-search-box{
-        width: 540px;
-        margin-left: auto;
-        margin-right: auto;
+    .btn-up {
+        width: 60px;
+        height: 60px;
+        margin-right: 50px;
+        margin-bottom: 50px;
     }
 }
 
@@ -319,12 +309,6 @@ body{
         grid-template-columns: repeat(2, 1fr);
         gap: 2rem;
     }
-    .meal-item{
-        margin: 0;
-    }
-    .meal-details{
-        width: 700px;
-    }  
 }
 
 @media screen and (min-width: 992px){
